--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.9",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.9",
     "@angular/compiler": "~11.2.9",
     "@angular/core": "~11.2.9",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.9",
+    "@angular/material": "^11.2.8",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.4.1",
     "firebaseui": "^4.8.0",
     "rxjs": "~6.6.0",
